--- a/css/styles.css
+++ b/css/styles.css
@@ -10,41 +10,58 @@
   display: none;
 }
 
-.navContainer {
-  width: 100vw;
+body {
+  cursor: none;
+}
+
+#circularcursor {
+  background: #5b78c7;
+  border: 1px solid black;
+  height: 30px;
+  width: 30px;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.headerSection {
+  width: 100%;
   height: 15vh;
   position: fixed;
-  z-index: 90;
-  background: rgba(236, 238, 244, 0.9);
+  background: rgba(255, 255, 255, 0.94);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+  opacity: 1;
 }
-.navContainer .naviLinks {
+.headerSection .naviLinks {
+  position: absolute;
   display: flex;
   flex-direction: column;
-  background: rgb(91, 120, 199);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(91, 120, 199, 0.3);
+  z-index: 999;
   width: 50%;
-  right: 0;
   height: 100vh;
-  position: absolute;
+  right: 0;
   text-align: center;
+  justify-content: space-evenly;
   list-style: none;
+  background: rgb(91, 120, 199);
   opacity: 0;
   clip-path: circle(200px at 140% -5%);
   -webkit-clip-path: circle(200px at 140% -5%);
   transition: all 0.5s ease-out;
 }
-.navContainer .naviLinks .navLi {
+.headerSection .naviLinks .navLi {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.navContainer .naviLinks .navLi a {
+.headerSection .naviLinks .navLi a {
   cursor: pointer;
   font-size: 3rem;
   font-family: "Spectral", sans-serif;
@@ -52,94 +69,105 @@
   text-decoration: none;
   color: #eceef4;
 }
-.navContainer .naviLinks .navLi a:hover {
+.headerSection .naviLinks .navLi a:hover {
   font-size: 4rem;
   font-weight: 800;
 }
-.navContainer .naviLinks.openNav {
+.headerSection .naviLinks.openNav {
   opacity: 1;
   clip-path: circle(2000px at 20% 10%);
   -webkit-clip-path: circle(2000px at 20% 10%);
+  transition: all 0.5s ease-out;
   pointer-events: all;
 }
-.navContainer .naviLinks.closeNav {
+.headerSection .naviLinks.closeNav {
   clip-path: circle(100px at 90% -20%);
   -webkit-clip-path: circle(100px at 90% -20%);
   transition: all 0.8s ease-in;
   pointer-events: none;
 }
-.navContainer nav {
+.headerSection .navSection {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
 }
-.navContainer nav ul {
+.headerSection .navSection ul {
   display: flex;
+  align-items: center;
   flex: 1;
-  font-size: 3rem;
+  list-style: none;
 }
-.navContainer nav ul .logo {
+.headerSection .navSection ul .logo {
   font-size: 2.5rem;
   padding: 3rem;
   font-family: "Spectral", sans-serif;
   font-weight: 700;
 }
-.navContainer nav ul .navToggle {
+.headerSection .navSection ul .navToggle {
   margin-left: auto;
   padding: 3rem;
   z-index: 999;
 }
-.navContainer nav ul .navToggle .toggleSvg {
+.headerSection .navSection ul .navToggle .toggleSvg {
   cursor: pointer;
 }
-.navContainer nav ul li {
-  list-style: none;
-}
 
-.landingContainer {
-  pointer-events: none;
-  background: #eceef4;
-  width: 100vw;
-  height: 100vh;
-}
-.landingContainer .landing {
+.intro {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background: #5b78c7;
+  z-index: 99;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 1;
+  position: fixed;
 }
-.landingContainer .landing .landingSpan {
-  font-size: 6.5rem;
-  font-weight: 600;
-  pointer-events: all;
+.intro .introH1 {
+  color: #fFF;
+  font-size: 8rem;
+  font-family: "Spectral", Sans-serif;
+  opacity: 0;
 }
-.landingContainer .landing .txtarea {
+
+.mainSection {
+  width: 100%;
+  height: 100vh;
+  background: #fFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.mainSection .txtArea {
+  background: #fff;
   width: 60%;
   height: 60%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
   font-family: "Spectral", sans-serif;
 }
-.landingContainer .landing .txtarea h1 {
+.mainSection .txtArea .webdevTxt {
+  font-size: 6.5rem;
+  font-weight: 600;
+}
+.mainSection .txtArea .mainP {
   font-size: 6.5rem;
   font-weight: 300;
   line-height: 1.2;
 }
 
-.aboutContainer {
-  width: 100vw;
-  height: 100vh;
-  background: #eceef4;
+.aboutSection {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  background: #fFF;
 }
-.aboutContainer .abtBox1 {
+.aboutSection .box1 {
   width: 100%;
   height: 50%;
   display: flex;
@@ -147,43 +175,43 @@
   justify-content: center;
   align-items: center;
 }
-.aboutContainer .abtBox1 h1 {
-  font-size: 5rem;
+.aboutSection .box1 .aboutH1 {
+  font-size: 6.5rem;
   font-family: "Spectral", sans-serif;
+  color: #5b78c7;
 }
-.aboutContainer .abtBox2 {
+.aboutSection .box2 {
   width: 100%;
-  height: 50%;
   display: flex;
-  align-items: center;
 }
-.aboutContainer .abtBox2 p {
+.aboutSection .box2 .aboutP {
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.5rem;
   line-height: 2;
   font-family: "Poppins", sans-serif;
-  margin: 8%;
+  margin: 5%;
   padding-bottom: 5%;
 }
 
-.projectContainer {
-  background: #eceef4;
+.projectSection {
+  background: #fff;
   width: 100vw;
-  height: 100vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.projectContainer .projectTxt {
+.projectSection .projectTxt {
   width: 100%;
 }
-.projectContainer .projectTxt h1 {
+.projectSection .projectTxt .projectH1 {
   padding: 2rem;
   font-size: 5rem;
   font-family: "Spectral", sans-serif;
   text-align: center;
+  color: #5b78c7;
 }
-.projectContainer .devTools {
+.projectSection .devTools {
   width: 100%;
   height: 100%;
   display: flex;
@@ -191,7 +219,7 @@
   align-items: center;
   padding: 2.5rem;
 }
-.projectContainer .devTools .mainTools, .projectContainer .devTools .supTools {
+.projectSection .devTools .mainTools, .projectSection .devTools .supTools {
   width: 50%;
   height: 100%;
   display: flex;
@@ -200,34 +228,34 @@
   align-items: center;
   overflow-x: hidden;
 }
-.projectContainer .devTools .mainTools .svgPack, .projectContainer .devTools .supTools .svgPack {
+.projectSection .devTools .mainTools .svgPack, .projectSection .devTools .supTools .svgPack {
   display: flex;
   justify-content: center;
 }
-.projectContainer .devTools .mainTools .svgPack .toolsBundle, .projectContainer .devTools .supTools .svgPack .toolsBundle {
+.projectSection .devTools .mainTools .svgPack .toolsBundle, .projectSection .devTools .supTools .svgPack .toolsBundle {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1.5rem;
   font-family: "Poppins", sans-serif;
 }
-.projectContainer .devTools .mainTools .svgPack .toolsBundle p, .projectContainer .devTools .supTools .svgPack .toolsBundle p {
+.projectSection .devTools .mainTools .svgPack .toolsBundle p, .projectSection .devTools .supTools .svgPack .toolsBundle p {
   font-size: 2rem;
 }
 
-.projectCardSection {
+.projectCards {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: inherit;
 }
-.projectCardSection .left {
+.projectCards .left {
   width: 50%;
 }
-.projectCardSection .left .detailsWrapper {
+.projectCards .left .detailsWrapper {
   margin: auto;
   width: 80%;
 }
-.projectCardSection .left .detailsWrapper .cards {
+.projectCards .left .detailsWrapper .cards {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -235,45 +263,51 @@
   padding: 2rem;
   text-align: start;
 }
-.projectCardSection .left .detailsWrapper .cards h2 {
-  font-size: 3rem;
+.projectCards .left .detailsWrapper .cards h1 {
+  font-size: 3.5rem;
   font-family: "Spectral", sans-serif;
   color: #5b78c7;
 }
-.projectCardSection .left .detailsWrapper .cards p {
-  font-size: 2rem;
+.projectCards .left .detailsWrapper .cards p {
+  font-size: 2.5rem;
   line-height: 2;
   font-family: "Poppins", sans-serif;
 }
-.projectCardSection .right {
+.projectCards .right {
   width: 50%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.projectCardSection .right .photos {
+.projectCards .right .photos {
   width: 40vw;
   height: 40vw;
+  background: #5b78c7;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  z-index: 20;
 }
-.projectCardSection .right .photos .photo {
+.projectCards .right .photos .photo {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
 }
-.projectCardSection .right .photos .photo img {
+.projectCards .right .photos .photo img {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
 }
 
 .contactContainer {
-  width: 100vw;
-  height: 65vh;
+  width: 100%;
+  height: 60vh;
   display: flex;
   justify-content: center;
-  background: #eceef4;
+  background: #fff;
 }
 .contactContainer .svgContainer2 {
   width: 40%;
@@ -291,120 +325,83 @@
 }
 .contactContainer .txtBox h1 {
   font-family: "Spectral", sans-serif;
-  font-size: 3rem;
+  color: #5b78c7;
+  font-size: 6rem;
   font-weight: 600;
   margin-bottom: 0.8rem;
 }
 .contactContainer .txtBox p {
   font-family: "Poppins", sans-serif;
-  font-size: 2rem;
+  font-size: 3rem;
   margin: 3%;
   margin-right: 5rem;
 }
 
 .footContainer {
-  width: 100vw;
-  height: 20vh;
+  width: 100%;
+  height: 40vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
   background: #5b78c7;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
-.footContainer ul {
+.footContainer .footBox1 {
+  width: 40%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
-.footContainer ul li {
+.footContainer .footBox1 h1 {
+  color: #fFF;
+  font-family: "Spectral", sans-serif;
+  font-size: 6rem;
+}
+.footContainer .footBox1 p {
+  color: #fFF;
+  font-size: 2rem;
+  font-family: "Poppins", sans-serif;
+}
+.footContainer .footBox2 {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.footContainer .footBox2 .p {
+  color: #fFF;
+  font-size: 2rem;
+  font-family: "Poppins", sans-serif;
+}
+.footContainer .footBox2 ul {
+  display: flex;
+  flex-direction: column;
+  color: #fFF;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+.footContainer .footBox2 ul .liTitle {
+  font-weight: 700;
+  font-size: 2rem;
+}
+.footContainer .footBox2 ul li {
   list-style: none;
-  padding: 0.5rem;
+  font-size: 1.5rem;
 }
-.footContainer ul .socials:hover, .footContainer ul a:hover {
-  fill: #d40f0f;
-}
-.footContainer .footCopy {
+.footContainer .footBox2 .footCopy {
   font-family: "Spectral", sans-serif;
   font-size: 3rem;
   font-weight: 600;
 }
-.footContainer .footCopy a {
+.footContainer .footBox2 .footCopy a {
   text-decoration: none;
-  color: #eceef4;
+  color: #fFF;
 }
 
 @media screen and (max-width: 768px) {
-  .navContainer .naviLinks {
+  .headerSection .naviLinks {
     width: 100%;
-    clip-path: circle(50px at 90% -10%);
-    -webkit-clip-path: circle(50px at 90% -10%);
-    transition: all 0.5s ease-out;
-  }
-  .navContainer .naviLinks.openNav {
-    opacity: 1;
-    clip-path: circle(1100px at 90% -10%);
-    -webkit-clip-path: circle(1100px at 90% -10%);
-    pointer-events: all;
-  }
-  .navContainer .naviLinks.openNav .navLi.fade {
-    transition: all 0.4s ease 0.2s;
-  }
-  .landingContainer .landing {
-    width: 100%;
-    height: 100%;
-  }
-  .landingContainer .landing .txtarea {
-    width: 80%;
-    height: 55%;
-  }
-  .landingContainer .landing .txtarea h1 {
-    font-size: 4rem;
-  }
-  .landingContainer .landing .txtarea span {
-    font-size: 4rem;
-  }
-  .aboutContainer .abtBox1 h1 {
-    font-size: 3.5rem;
-  }
-  .aboutContainer .abtBox2 p {
-    font-size: 1.6rem;
-    margin: 4%;
-  }
-  .projectContainer .projectTxt h1 {
-    font-size: 2.5rem;
-  }
-  .projectContainer .devTools {
-    flex-direction: column;
-  }
-  .projectContainer .devTools .mainTools, .projectContainer .devTools .supTools {
-    flex-direction: column;
-  }
-  .projectContainer .devTools .mainTools .svgPack, .projectContainer .devTools .supTools .svgPack {
-    flex-direction: column;
-  }
-  .projectContainer .devTools .mainTools .svgPack .toolsBundle, .projectContainer .devTools .supTools .svgPack .toolsBundle {
-    flex-direction: column;
-  }
-  .projectContainer .devTools .mainTools .svgPack .toolsBundle p, .projectContainer .devTools .supTools .svgPack .toolsBundle p {
-    font-size: 1rem;
-  }
-  .projectContainer .projectCards {
-    height: 100%;
-  }
-  .projectContainer .projectCards .cards {
-    flex-direction: column;
-    height: 500px;
-  }
-  .projectContainer .projectCards .cards .cardPic {
-    width: 100%;
-  }
-  .projectContainer .projectCards .cards .cardDisc {
-    width: 100%;
-  }
-  .projectContainer .projectCards .cards .cardDisc h2 {
-    font-size: 2.5rem;
-  }
-  .projectContainer .projectCards .cards .cardDisc p {
-    font-size: 1.6rem;
   }
 }/*# sourceMappingURL=styles.css.map */
