--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,67 +2,78 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-size: 62.5%;
-    //overflow: hidden;
+	font-size: 62.5%;
     ::-webkit-scrollbar
     {
         display: none;
     }
     -ms-overflow-style: none; /*  IE & Edge  */
     scrollbar-width: none; /*  firefox  */
-
 }
 
-.navContainer{
-    //border: 1px solid green;
+body{
+    cursor: none;
+}
 
-    width: 100vw;
-    height: 15vh;
-    position: fixed;
-    z-index: 90;
-    background: rgba(236, 238, 244, 0.9);
+#circularcursor {
+    background: #5b78c7;
+    border:1px solid black;    
+    height:30px;
+    width:30px;
+    top: 0;
+    left: 0;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    position: absolute;
+    z-index: 1;
+    pointer-events: none;
+  }
 
+
+.headerSection{
+	width: 100%;
+	height: 15vh;
+	position: fixed;
+	//z-index: 98;
+background: rgba(255, 255, 255, 0.94);
+//border-radius: 16px;
 //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
-    //display: flex;
-    //justify-content: center;
-    //border: 2px solid red;
+//border: 2px solid #d82929f6;
+opacity: 1;
 
-    .naviLinks{
-        display: flex;
-        flex-direction: column;
-        
+	.naviLinks{
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+        z-index: 999;
+		width: 50%;
+		height: 100vh;
+		right: 0;
+		text-align: center;
+		justify-content: space-evenly;
+		list-style: none;
         background: rgb(91, 120, 199);
         //border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        border: 1px solid rgba(91, 120, 199, 0.3);
-        //background: #5b78c7;
-        width: 50%;
-        right: 0;
-        height: 100vh;
-        position: absolute;
-        text-align: center;
-        list-style: none;
-        //z-index: 999;
-        //display: none;
-        opacity: 0;
+        //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        //backdrop-filter: blur(5px);
+        //-webkit-backdrop-filter: blur(5px);
+        //border: 1px solid rgba(91, 120, 199, 0.3);
+		opacity: 0;
         clip-path: circle(200px at 140% -5%);
         -webkit-clip-path: circle(200px at 140% -5%);
-        transition: all 0.5s ease-out;      // fading menu  
-        //pointer-events: none;    
-        
-    
-        .navLi{
-            //border: 1px solid blue;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        transition: all 0.5s ease-out;      // fading menu 
 
-            a{
+		.navLi{
+			//border: 2px solid white;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			a{
                 cursor: pointer;
                 font-size: 3rem;
                 font-family: 'Spectral', sans-serif;
@@ -77,15 +88,17 @@ backdrop-filter: blur(5px);
                 }
                 //border: 2px solid red;
             }
-        }
-    }
 
-    .naviLinks.openNav {
+		}
+	}
+
+	.naviLinks.openNav {
 
         //display: inline;
         opacity: 1;
         clip-path: circle(2000px at 20% 10%);
         -webkit-clip-path: circle(2000px at 20% 10%);
+        transition: all 0.5s ease-out;
         pointer-events: all;
         
 
@@ -101,139 +114,141 @@ backdrop-filter: blur(5px);
         //background: #eceef4;
     }
 
+	.navSection{
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		//z-index: 99;
+		//border: 2px solid red;
 
+		ul{
+			display: flex;
+			align-items: center;
+			flex: 1;
+			list-style: none;
+			//border: 2px solid blue;
 
-    nav{
-        width: 100%;
-        height: 100%;
-        //border: 2px solid pink;
-        display: flex;
-        align-items: center;
+			.logo{
+				font-size: 2.5rem;
+				padding: 3rem;
+				font-family: 'Spectral', sans-serif;
+				font-weight: 700;
+			}
 
-        ul{
-            //border: 2px solid red;
-            display: flex;
-            flex: 1;
-            font-size: 3rem;
-            //margin: 2rem;
-            
-            .logo{
-                font-size: 2.5rem;
-                padding: 3rem;
-                font-family: 'Spectral', sans-serif;
-                font-weight: 700;
-            }
+			.navToggle{
+                //position: absolute;
+				margin-left: auto;
+				padding: 3rem;
+				z-index: 999;
 
-            .navToggle{
-                margin-left: auto;
-                padding: 3rem;
-                z-index: 999;
-                //cursor: pointer;
-
-                .toggleSvg{
-                    cursor: pointer;
-                }
-            }
-
-            li{
-                list-style: none;
-            }
-
-        }
-
-
-    }
+				.toggleSvg{
+					cursor: pointer;
+				}
+			}
+		}
+	}
 }
 
-.landingContainer{
-    pointer-events: none;
-    background: #eceef4;
-    width: 100vw;
-    height: 100vh;
+.intro{
+	width: 100%;
+	height: 100vh;
+	background: #5b78c7;
+	z-index: 99;
+	display: flex;
+    //display: none;
+	justify-content: center;
+	align-items: center;
+	opacity: 1;
+    position: fixed;
 
-    .landing{
-        width: 100%;
-        height: 100%;
+	.introH1{
+		color: #fFF;
+		font-size: 8rem;
+		font-family: 'Spectral', Sans-serif;
+        opacity: 0;
+	}
+}
+
+.mainSection{
+	width: 100%;
+	height: 100vh;
+	//border: 2px solid blue;
+	background: #fFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	.txtArea{
+		background: #fff;
+		width: 60%;
+		height: 60%;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
-       //text-align: center;
-        //border: 5px solid red;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        font-family: 'Spectral', sans-serif; //applies to anything in txtarea unless specified
 
-        .landingSpan{
+        .webdevTxt{ //if gsap scroll doesnt work then span outside of txtarea
             font-size: 6.5rem;
             font-weight: 600;
-            pointer-events: all;
         }
 
-        .txtarea{
-            width: 60%;
-            height: 60%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            text-align: center;
-            align-items: center;
-            font-family: 'Spectral', sans-serif;
-            //position: absolute;
-            //z-index: 20;
-            //border: 2px solid lightgreen;
-
-            h1{
-                font-size: 6.5rem;
-                font-weight: 300;
-               line-height: 1.2;
-            }
-
-
+        .mainP{
+            font-size: 6.5rem;
+            font-weight: 300;
+            line-height: 1.2;
         }
-
-    }
+	}
 }
 
-.aboutContainer{
-    width: 100vw;
-    height: 100vh;
-    background: #eceef4;
+.aboutSection{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    background: #fFF;
+    //border: 2px solid red;
 
-    .abtBox1{
+    .box1{
         width: 100%;
         height: 50%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        
-        h1{
-            font-size: 5rem;
+        //border: 2px solid peru;
+
+        .aboutH1{
+            font-size: 6.5rem;
             font-family: 'Spectral', sans-serif;
+            color: #5b78c7;
         }
     }
 
-    .abtBox2{
+    .box2{
         width: 100%;
-        height: 50%;
+        //height: auto;
         display: flex;
-        align-items: center;
+        //border: 2px solid green;
 
-        p{
+        .aboutP{
             text-align: center;
-            font-size: 2rem;
+            font-size: 2.5rem;
             line-height: 2;
             font-family: 'Poppins', sans-serif;
-            margin: 8%;
+            margin: 5%;
             padding-bottom: 5%;
-        }        
+            //border: 2px solid red;
+        }
     }
 }
 
-.projectContainer{
-    background: #eceef4;
+.projectSection{
+    background: #fff;
     width: 100vw;
-    height: 100vh;
+    height: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -243,11 +258,12 @@ backdrop-filter: blur(5px);
         width: 100%;
         //border: 2px solid green;
 
-        h1{
+        .projectH1{
             padding: 2rem;
             font-size: 5rem;
             font-family: 'Spectral', sans-serif;
             text-align: center;
+            color: #5b78c7;
         }
     }
 
@@ -276,15 +292,16 @@ backdrop-filter: blur(5px);
             .svgPack{
                 display: flex;
                 justify-content: center;
+                //border: 1px solid red;
                 //padding: 1.5rem;
 
                 .toolsBundle{
                     display: flex;
-                   flex-direction: column;
+                    flex-direction: column;
                     align-items: center;
                     padding: 1.5rem;
                     font-family: 'Poppins', sans-serif;
-
+                    //border: 1px solid red;
                     p{
                         font-size: 2rem;
                     }
@@ -294,11 +311,12 @@ backdrop-filter: blur(5px);
     }      
 }
 
-.projectCardSection {
-    display:flex;
-    width: 100vw;
-    height: 100vh;	
-    //outline:1px solid red;
+
+.projectCards {
+    display:flex;	
+    //border: 2px solid pink;
+    width: 100%;
+    height: inherit;
   
       .left {
           width:50%;
@@ -316,14 +334,14 @@ backdrop-filter: blur(5px);
                   padding: 2rem;
                   text-align: start;
               
-                  h2{
-                      font-size: 3rem;
+                  h1{
+                      font-size: 3.5rem;
                       font-family: 'Spectral', sans-serif;
                       color: #5b78c7;
                   }
               
                   p{
-                      font-size: 2rem;
+                      font-size: 2.5rem;
                       line-height: 2;
                       font-family: 'Poppins', sans-serif;
                   }
@@ -342,14 +360,18 @@ backdrop-filter: blur(5px);
           .photos {
               width:40vw;
               height:40vw;
-              //background:maroon;
+              background: #5b78c7;
               position:relative;
-              //border-radius: 1rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border-radius: 1rem;
+              z-index: 20;
           
               .photo {
                   position:absolute;
-                  width:100%;
-                  height:100%;
+                  width:95%;
+                  height:95%;
                   //border-radius: 1rem;
               
                   img{
@@ -362,17 +384,17 @@ backdrop-filter: blur(5px);
           }
       }
   
-  }
-  
+}  
+
 
 .contactContainer{
-    width: 100vw;
-    height: 65vh;
+    width: 100%;
+    height: 60vh;
     display: flex;
     justify-content: center;
     
     //border: 2px solid greenyellow;
-    background: #eceef4;
+    background: #fff;
 
     .svgContainer2{
         //border: 2px solid red;
@@ -395,14 +417,15 @@ backdrop-filter: blur(5px);
 
         h1{
             font-family: 'Spectral', sans-serif;
-            font-size: 3rem;
+            color: #5b78c7;
+            font-size: 6rem;
             font-weight: 600;
             margin-bottom: 0.8rem;
         }
 
         p{
             font-family: 'Poppins', sans-serif;
-            font-size: 2rem;
+            font-size: 3rem;
             margin: 3%;
             margin-right: 5rem;
 
@@ -411,33 +434,76 @@ backdrop-filter: blur(5px);
 }
 
 .footContainer{
-    width: 100vw;
-    height: 20vh;
+    width: 100%;
+    height: 40vh;
     display: flex;
-    flex-direction: column;
+   // border-radius: 30px 30px 0 0;
+    //flex-direction: column;
     align-items: center;
-    justify-content: center;
+    //justify-content: center;
     background: #5b78c7;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
+   .footBox1{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    //border: 2px solid red;
+    h1{
+        color: #fFF;
+        font-family: 'Spectral', sans-serif;
+        font-size: 6rem;
+    }
+
+    p{
+        color: #fFF;
+        font-size: 2rem;
+        font-family: 'Poppins', sans-serif;
+    }
+   }
+
+   //original state
+   .footBox2{
+    
+    width: 60%;
+    height: 100%;
+    display: flex;
+    //flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+   // border: 2px solid red;
+   .p{
+    color: #fFF;
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+   }
     ul{
         display: flex;
-        align-items: center;
+        flex-direction: column;
+        //align-items: center;
+        color: #fFF;
+        //font-size: 2rem;
+        font-family: 'Poppins', sans-serif;
+        text-align: center;
+        //border: 1px solid red;
+
+        .liTitle{
+            font-weight: 700;
+            font-size: 2rem;
+        }
 
         li{
             list-style: none;
-            padding: 0.5rem;
+            //padding: 0.5rem;
             //opacity: 0.7;
             //margin-right: 1rem;
-            //font-size: 1.2rem;
+            font-size: 1.5rem;
         }
 
-        .socials, a{
-            &:hover{
-                fill: #d40f0f;
-            }
-                
-        }
+    
     }
 
     .footCopy{
@@ -448,125 +514,17 @@ backdrop-filter: blur(5px);
         font-weight: 600;
         a{
             text-decoration: none;
-            color: #eceef4;
+            color: #fFF;
         }
     }
+   }
 }
 
 @media screen and (max-width: 768px)
 {
-
-    .navContainer{
-        
-    .naviLinks{
-        width: 100%;
-        clip-path: circle(50px at 90% -10%);
-        -webkit-clip-path: circle(50px at 90% -10%);
-        transition: all 0.5s ease-out;          
-    }
-
-    .naviLinks.openNav {
-        opacity: 1;
-        clip-path: circle(1100px at 90% -10%);
-        -webkit-clip-path: circle(1100px at 90% -10%);
-        pointer-events: all;        
-
-        .navLi.fade{
-            transition: all 0.4s ease 0.2s;            
-        }
-    }
-
-    }    
-
-    .landingContainer{
-
-        .landing{
-            //border: 2px solid green;
-            width: 100%;
-            height: 100%;
-    
-            .txtarea{
-                width: 80%;
-                height: 55%;
-                h1{
-                    font-size: 4rem;
-
-                }
-    
-                span{
-                    font-size: 4rem;
-                }
-            }
-        }
-    }
-
-    .aboutContainer{
-
-        .abtBox1{
-            h1{
-                font-size: 3.5rem;
-            }
-        }
-        .abtBox2{
-            p{
-
-                font-size: 1.6rem;
-                margin: 4%;
-            }        
-        }
-    }
-
-    .projectContainer{
-        .projectTxt{
-            h1{
-                font-size: 2.5rem;
-            }
-        }
-    
-        .devTools{
-            flex-direction: column;
-
-            .mainTools, .supTools{
-                flex-direction: column;
-    
-                .svgPack{
-                    flex-direction: column;
-                    .toolsBundle{
-                        flex-direction: column;
-                        
-                        p{
-                            font-size: 1rem;
-                        }
-                    }
-                }
-            }
-        }
-
-        .projectCards{
-            height: 100%;
-
-            .cards{
-                flex-direction: column;
-                height: 500px;
-                //border: 1px solid green;
-
-                .cardPic{
-                    width: 100%;
-                    //border: 1px solid lightgreen;
-                }
-
-                .cardDisc{
-                    width: 100%;
-
-                    h2{
-                        font-size: 2.5rem;
-                    }
-
-                    p{
-                        font-size: 1.6rem;
-                    }
-                }
-            }
-        }
-    }
+	.headerSection{
+		.naviLinks{
+			width: 100%;
+		}
+	}
 }
